# TestC

./: .gitignore  CMakeLists.txt  Makefile  README.md
apps/: CMakeLists.txt  stack_trace_test.c
apps/subdir/: CMakeLists.txt  foo.c
include/: CMakeLists.txt
include/testc/: CMakeLists.txt  assert.h  stack_trace.h  test_runner.h  test_suite.h
src/: CMakeLists.txt  stack_trace.c  test_runner.c  test_suite.c  utils.c  utils.h
test/: CMakeLists.txt  test.c  test_runner_test.c
